# stefan-masters-research-package

./: .gitignore  CLAUDE.md  Notes.md  README.md  ai_curation_instructions.md  automated_curation_schema.py  curation_instructions.md  data_dictionary.md  database_connection.ipynb  database_processing_2.ipynb  experiment.json  generate_data_dictionary.py  identification_scoring_results_filtered.json  identification_scoring_results_unfiltered.json  identify_run.out  identify_run_gpt4.out  identify_run_gpt5.out  notebook.ipynb  pmids_to_curate.json  process_all_results.sh  publication_data.json  pyproject.toml  todos.md
aus_stem_cell_curate/: __init__.py
ground_truth/: AIBNe001-A_gt.json  AIBNi001-A_gt.json  AIBNi002-A_gt.json  AIBNi003-A_gt.json  AIBNi004-A_gt.json  AIBNi005-A_gt.json  AIBNi006-A_gt.json  AIBNi007-A_gt.json  AIBNi008-A_gt.json  AIBNi009-A_gt.json  AIBNi010-A_gt.json  AIBNi011-A_gt.json  AIBNi012-A_gt.json  AIBNi013-A_gt.json  AIBNi014-A_gt.json  AIBNi015-A_gt.json  AIBNi016-A_gt.json  AIBNi017-A_gt.json  AIBNi018-A_gt.json  CIAUi001-A_gt.json  CIAUi002-A_gt.json  CIAUi002-B_gt.json  CIAUi002-C_gt.json  CIAUi003-A-1_gt.json  CIAUi003-A_gt.json  ESIBIe003-A-10_gt.json  ESIBIe003-A-1_gt.json  ESIBIe003-A-2_gt.json  ESIBIe003-A-3_gt.json  ESIBIe003-A-4_gt.json  ESIBIe003-A_gt.json  FINi001-A_gt.json  FINi002-A-1_gt.json  FINi002-A_gt.json  FINi003-A_gt.json  FINi004-A_gt.json  FINi005-A_gt.json  FINi006-A_gt.json  GENEAe001-A_gt.json  GENEAe002-A_gt.json  (+274 more)
ground_truth_fixed/: 00_publication_dictionary.json  AIBNe001-A_gt.json  AIBNi001-A_gt.json  (+313 more)
(+4829 files in other folders)
